--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -8,5 +8,9 @@
   </time>
   <p>
     <%= question.body %>
+    <br>
+      <%= link_to 'Show', question_path(question) %> |
+      <%= link_to 'Edit', edit_question_path(question) %> |
+      <%= link_to 'Destory', question_path(question), data: {method: :delete, confirm: 'Are you sure?'} %> 
   </p>
 <%end%>
