--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,17 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li><%= link_to 'Home', root_path%></li>
-        <li><%= link_to 'Questions', questions_path%></li>
-      </ul>
-    </nav>
+    <header class="p-13 bg-dark text white">
+      <div class="container">
+        <nav class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><%= link_to 'Home', root_path, class: 'nav-link px-2 text-white' %></li>
+            <li><%= link_to 'Questions', questions_path, class: 'nav-link px-2 text-white' %></li>
+          </ul>
+        </nav>
+      <div>
+    <header>
+
     <main>
     <%= yield %>
     </main>
