--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,15 +1,20 @@
 
 <%= form_with model: @question do |f| %>
-   <div>
-      <%= f.label :title %>
-     <%= f.text_field :title, placeholder: "Title" %>
+   <div class="mb-3 row">
+      <%= f.label :title, class: 'col-sm-2 col-form-label' %>
+
+    <div class="col-sm-10">
+      <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title", calss: 'form-control' %>
+    </div>
    </div>
 
-   <div>
-      <%= f.label :body %>
-      <%= f.text_area :body, placeholder: "Body" %>
+   <div class="mb-3 row">
+      <%= f.label :body, class: 'col-sm-2 col-form-label' %>
+    <div class="col-sm-10">
+      <%= f.text_area :body, placeholder: "Не менее 5 символов", required: true, minlength: 3, calss: 'form-control' %>
     </div>
+   </div>
 
-    <%= f.submit "Submit question"%>
+    <%= f.submit "Submit question", class: 'btn btn-primary'%>
   <% end %>
   
