--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,16 +1,21 @@
-<h1>Questions</h1>
+<h1 class="mb-4">Questions</h1>
 
 <% @questions.each do |question| %>
-  <h2><%= question.title %></h2>
+  <article class="card">
+    <div class="card-body">
+      <h2><%= question.title %></h2>
+    <section class="card-text">
+      <time datetime="<%= question.formatted_created_at%>">
+        <small><%= question.formatted_created_at %></small>
+      </time>
+      <p class="my-2">
+        <%= question.body %>
+      </p>
+    </section>
 
-  <time datetime="<%= question.formatted_created_at%>">
-    <%= question.formatted_created_at %>
-  </time>
-  <p>
-    <%= question.body %>
-    <br>
-      <%= link_to 'Show', question_path(question) %> |
-      <%= link_to 'Edit', edit_question_path(question) %> |
-      <%= link_to 'Destory', question_path(question), data: {method: :delete, confirm: 'Are you sure?'} %> 
-  </p>
+    <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %>
+    <%= link_to 'Edit', edit_question_path(question), class: 'btn btn-secondary' %>
+    <%= link_to 'Destory', question_path(question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %> 
+    </div>
+  </article>
 <%end%>
