--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,17 +1,23 @@
+<%= @question.errors.full_messages %>
 
 <%= form_with model: @question do |f| %>
    <div class="mb-3 row">
-      <%= f.label :title, class: 'col-sm-2 col-form-label' %>
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :title %>
+    </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :title, required: true, minlength: 2, placeholder: "Title", calss: 'form-control' %>
+      <%= f.text_field :title, placeholder: "Title", class: 'form-control' %>
     </div>
    </div>
 
    <div class="mb-3 row">
-      <%= f.label :body, class: 'col-sm-2 col-form-label' %>
+      <div class="col-sm-2 col-form-label" >
+        <%= f.label :body %>
+      </div>
+
     <div class="col-sm-10">
-      <%= f.text_area :body, placeholder: "Не менее 5 символов", required: true, minlength: 3, calss: 'form-control' %>
+      <%= f.text_area :body, class: 'form-control' %>
     </div>
    </div>
 
