--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,4 @@
-<%= @question.errors.full_messages.each do |msg| %>
-
-<% end %>
+<%= render 'shared/errors', object: @question %>
 
 <%= form_with model: @question do |f| %>
    <div class="mb-3 row">
