--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -3,6 +3,7 @@
   <time datetime="<%= @question.formatted_created_at%>">
     <%= @question.formatted_created_at %>
   </time>
+
 <p class="lead my-3">
   <%= @question.body%>
 </p>
@@ -13,6 +14,9 @@
 
 <hr class="my-3">
 <h2>Write your answer</h2>
+
+<%= render 'shared/errors', object: @answer %>
+
 <%= form_with model: [@question, @answer] do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
@@ -24,4 +28,15 @@
   </div>
 
   <%= f.submit "Добавить ответ", class: 'btn btn-primary' %>
+<% end %>
+
+<h2 class="mt-5">Answers</h2>
+<% @answers.each do |answer| %>
+<time datetime="<%= answer.formatted_created_at%>">
+    <%= answer.formatted_created_at %>
+  </time>
+
+  <p>
+    <%= answer.body%>
+  </p>
 <% end %>
