--- a/Myapp/app/views/questions/_form.html.erb
+++ b/Myapp/app/views/questions/_form.html.erb
@@ -17,7 +17,7 @@
       </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, class: 'form-control' %>
+      <%= f.text_area :body, placeholder: "Body", class: 'form-control' %>
     </div>
    </div>
 
