--- a/Myapp/app/views/answers/_form.html.erb
+++ b/Myapp/app/views/answers/_form.html.erb
@@ -11,5 +11,5 @@
     </div>
   </div>
   
-  <%= f.submit "Добавить ответ", class: 'btn btn-primary' %>
+  <%= f.submit "Save answer", class: 'btn btn-primary' %>
 <% end %>
