--- a/Myapp/app/views/questions/show.html.erb
+++ b/Myapp/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
 <h1 class="mb-4"><%= @question.title%></h1>
+<% currently_at 'Questions' %>
 
   <time datetime="<%= @question.formatted_created_at%>">
     <%= @question.formatted_created_at %>
