--- a/Myapp/app/views/questions/index.html.erb
+++ b/Myapp/app/views/questions/index.html.erb
@@ -5,6 +5,8 @@
 
 <%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg'%>
 
+
+
 <% @questions.each do |question| %>
   <article class="card mt-3">
     <div class="card-body">
@@ -13,9 +15,10 @@
       <time datetime="<%= question.formatted_created_at%>">
         <small><%= question.formatted_created_at %></small>
       </time>
-      <p class="my-2">
-        <%= question.body %>
-      </p>
+
+      <div class="my-2">
+        <%= truncate strip_tags(question.body), length: 100, omission: '...(continued)' %>
+      </div>
     </section>
 
     <%= link_to 'Show', question_path(question), class: 'btn btn-primary' %>
