--- a/Myapp/app/views/questions/index.html.erb
+++ b/Myapp/app/views/questions/index.html.erb
@@ -5,7 +5,7 @@
 
 <%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg'%>
 
-
+<%= paginate @questions %>
 
 <% @questions.each do |question| %>
   <article class="card mt-3">
@@ -27,3 +27,5 @@
     </div>
   </article>
 <%end%>
+
+<%= paginate @questions %>
