Lesson8 new user

--- a/Myapp/app/views/users/new.html.erb
+++ b/Myapp/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
 <% provide :page_title, 'Registration'%>
-<% currently_at 'Registration' %>
+<% currently_at 'Sing Up' %>
 
-<h1 class="mb-4">New question</h1>
+<h1 class="mb-4">Registration</h1>
+
+<%= render 'form' %>
