--- a/Myapp/app/views/questions/show.html.erb
+++ b/Myapp/app/views/questions/show.html.erb
@@ -18,11 +18,11 @@
 
 <%= render 'answers/form' %>
 
-<h2 class="mt-5">Answers</h2>  
+<h2 class="mt-5 mb-3">Answers</h2>  
 
-<%= paginate @answers %>
+<%= pagination @pagy %>
 
 <%= render partial: 'answers/answer', collection: @answers,
   as: :answer, locals: {question: @question} %>
 
-<%= paginate @answers %>
+<%= pagination @pagy %>
