--- a/Myapp/app/views/pages/index.html.erb
+++ b/Myapp/app/views/pages/index.html.erb
@@ -1,9 +1,9 @@
 <% provide :page_title, 'Start' %>
-<% currently_at 'Home' %>
+<% currently_at t('menu.home') %>
 
-<h1>Second try</h1>
+<h1><%= t '.title' %></h1>
 
-<p>Welcom</p>
+<p><%= t '.services_html' %></p>
 
 
 <footer>
