--- a/Myapp/app/views/pages/index.html.erb
+++ b/Myapp/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<% provide :page_title, 'Start' %>
+<% provide :page_title, t('.title') %>
 <% currently_at t('menu.home') %>
 
 <h1><%= t '.title' %></h1>
