--- a/Myapp/app/views/questions/index.html.erb
+++ b/Myapp/app/views/questions/index.html.erb
@@ -1,12 +1,10 @@
-<% provide :page_title, 'Questions'%>
-<% currently_at 'Questions' %>
+<% provide :page_title, t('.title') %>
+<% currently_at t('menu.questions') %>
 
-<h1 class="mb-4">Questions</h1>
+<h1 class="mb-4"><%= t('.title') %></h1>
 
-<%= link_to 'New question', new_question_path, class: 'btn btn-primary btn-lg mg-3' %>
+<%= link_to t('.new'), new_question_path, class: 'btn btn-primary btn-lg mb-3' %>
 
-<%== pagy_bootstrap_nav @pagy %>
-
+<%= pagination @pagy %>
 <%= render @questions %>
-
-<%== pagy_bootstrap_nav @pagy %>
+<%= pagination @pagy %>
