--- a/Myapp/app/views/shared/_menu.html.erb
+++ b/Myapp/app/views/shared/_menu.html.erb
@@ -35,27 +35,30 @@
         <ul class="nav col-12 col-lg-auto mb-2 mb-md-0">
           <% if user_signed_in? %>
             <li class="dropdown">
-              <%= nav_tab current_user.name_or_email, '#',
-                class: 'nav-link px-2 dropdown-toggle',
-                data: {"bs-toggle": 'dropdown'}, current_page: current_page %>
+              <%= link_to '#',
+                class: 'nav-link px-2 dropdown-toggle text-white',
+                data: {"bs-toggle": 'dropdown'} do %>
+                <%= current_user.gravatar %>
+                <%= current_user.name_or_email %>
+              <% end %>
               
-                <ul class="dropdown-menu">
-                 <li>
-                  <%= link_to 'Edit profile', edit_user_path(current_user), class: 'dropdown-item' %>
-                  </li>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to t('menu.edit_profile'), edit_user_path(current_user), class: 'dropdown-item' %>
+                </li>
 
-                    <li><hr class="dropdown-divider"></li>
+                <li><hr class="dropdown-divider"></li>
                     
-                  <li>
-                  <%= link_to 'Log Out', session_path, class: 'dropdown-item', data: {method: :delete} %>
-                  </li>
-                </ul>
+                <li>
+                  <%= link_to t('menu.log_out'), session_path, class: 'dropdown-item', data: {method: :delete} %>
+                </li>
+              </ul>
             </li>  
               <% else %>
-            <li><%= nav_tab 'Sign Up', new_user_path,
+            <li><%= nav_tab t('menu.sign_up'), new_user_path,
               class: 'nav-link px-2', current_page: current_page %></li>
 
-            <li><%= nav_tab 'Log In', new_session_path,
+            <li><%= nav_tab t('menu.log_in'), new_session_path,
               class: 'nav-link px-2', current_page: current_page %></li>
           <% end %>
         </ul>
