--- a/Myapp/app/views/answers/_form.html.erb
+++ b/Myapp/app/views/answers/_form.html.erb
@@ -1,5 +1,4 @@
 <%= render 'shared/errors', object: @answer %>
-
 <%= form_with model: [@question, @answer] do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
@@ -10,6 +9,6 @@
       <%= f.text_area :body, class: 'form-control', required: true %>
     </div>
   </div>
-  
-  <%= f.submit "Save answer", class: 'btn btn-primary' %>
+
+  <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
 <% end %>
