--- a/Myapp/app/views/questions/_form.html.erb
+++ b/Myapp/app/views/questions/_form.html.erb
@@ -1,26 +1,24 @@
 <%= render 'shared/errors', object: @question %>
-
 <%= form_with model: @question do |f| %>
-   <div class="mb-3 row">
+  <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
       <%= f.label :title %>
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :title, placeholder: "Title", class: 'form-control' %>
+      <%= f.text_field :title, class: 'form-control' %>
     </div>
-   </div>
+  </div>
 
-   <div class="mb-3 row">
-      <div class="col-sm-2 col-form-label" >
-        <%= f.label :body %>
-      </div>
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :body %>
+    </div>
 
     <div class="col-sm-10">
-      <%= f.text_area :body, placeholder: "Body", class: 'form-control' %>
+      <%= f.text_area :body, class: 'form-control' %>
     </div>
-   </div>
+  </div>
 
-    <%= f.submit "Submit question", class: 'btn btn-primary'%>
-  <% end %>
-  
+  <%= f.submit t('global.button.submit'), class: 'btn btn-primary' %>
+<% end %>
