--- a/Myapp/app/views/questions/show.html.erb
+++ b/Myapp/app/views/questions/show.html.erb
@@ -1,28 +1,37 @@
-<h1 class="mb-4"><%= @question.title%></h1>
-<% currently_at 'Questions' %>
+<% provide :page_title, @question.title %>
+<% currently_at t('menu.questions') %>
 
-  <time datetime="<%= @question.formatted_created_at%>">
-    <%= @question.formatted_created_at %>
-  </time>
+<h1 class="mb-4"><%= @question.title %></h1>
+
+<time datetime="<%= @question.formatted_created_at %>">
+  <%= @question.formatted_created_at %>
+</time>
 
 <div class="lead my-3">
-  <%= sanitize @question.body%>
+  <%= sanitize @question.body %>
 </div>
 
-<%= link_to 'Show', question_path(@question), class: 'btn btn-primary' %>
-<%= link_to 'Edit', edit_question_path(@question), class: 'btn btn-secondary' %>
-<%= link_to 'Destory', question_path(@question), class: 'btn btn-danger', data: {method: :delete, confirm: 'Are you sure?'} %>
+<div class="mb-3">
+  <%= @question.user.gravatar %>
+  <%= @question.user.name_or_email %>
+</div>
 
-<hr class="my-3">
-<h2>Write your answer</h2>
+<div class="border-top border-bottom py-3">
+  <div class="btn-group">
+    <%= link_to t('global.button.show'), question_path(@question), class: 'btn btn-primary' %> 
+    <%= link_to t('global.button.edit'), edit_question_path(@question), class: 'btn btn-secondary' %>
+    <%= link_to t('global.button.delete'), question_path(@question), class: 'btn btn-danger',
+      data: {method: :delete, confirm: t('global.dialog.you_sure')} %>
+  </div>
+</div>
+
+<h2 class="my-3"><%= t '.write_answer' %></h2>
 
 <%= render 'answers/form' %>
 
-<h2 class="mt-5 mb-3">Answers</h2>  
+<h2 class="mt-5 mb-3"><%= t '.answers' %></h2>
 
 <%= pagination @pagy %>
-
 <%= render partial: 'answers/answer', collection: @answers,
   as: :answer, locals: {question: @question} %>
-
 <%= pagination @pagy %>
