--- a/Myapp/app/views/users/_form.html.erb
+++ b/Myapp/app/views/users/_form.html.erb
@@ -1,5 +1,4 @@
 <%= render 'shared/errors', object: @user %>
-
 <%= form_with model: @user do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
@@ -7,7 +6,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.email_field :email, placeholder: 'E-mail', class: 'form-control form-control-lg' %>
+      <%= f.email_field :email, class: 'form-control form-control-lg' %>
     </div>
   </div>
 
@@ -17,7 +16,7 @@
     </div>
 
     <div class="col-sm-10">
-      <%= f.text_field :name, placeholder: 'Name', class: 'form-control form-control-lg' %>
+      <%= f.text_field :name, class: 'form-control form-control-lg' %>
     </div>
   </div>
 
@@ -40,8 +39,9 @@
       <%= f.password_field :password_confirmation, class: 'form-control form-control-lg' %>
     </div>
   </div>
+
   <% unless @user.new_record? %>
-   <div class="mb-3 row">
+    <div class="mb-3 row">
       <div class="col-sm-2 col-form-label">
         <%= f.label :old_password %>
       </div>
@@ -51,6 +51,6 @@
       </div>
     </div>
   <% end %>
-
-  <%= f.submit (@user.new_record? ? "Register!" : "Save"), class: 'btn btn-primary btn-lg' %>
+  <% t_key = (@user.new_record? ? "register" : "save") %>
+  <%= f.submit t(t_key, scope: 'users.global.forms'), class: 'btn btn-primary btn-lg' %>
 <% end %>
