--- a/Myapp/app/views/answers/_answer.html.erb
+++ b/Myapp/app/views/answers/_answer.html.erb
@@ -24,3 +24,6 @@
     </div>  
   </div> 
 <% end %>
+
+<%= render 'comments/commentable', commentable: answer, comment: @comment, 
+  html_id: dom_id(answer, 'comment_form') %>
