--- a/Myapp/app/views/questions/_form.html.erb
+++ b/Myapp/app/views/questions/_form.html.erb
@@ -1,4 +1,5 @@
 <%= render 'shared/errors', object: @question %>
+
 <%= form_with model: @question do |f| %>
   <div class="mb-3 row">
     <div class="col-sm-2 col-form-label">
@@ -17,6 +18,16 @@
 
     <div class="col-sm-10">
       <%= f.text_area :body, class: 'form-control' %>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <div class="col-sm-2 col-form-label">
+      <%= f.label :tags %>
+    </div>
+
+    <div class="col-sm-10">
+      <%= f.collection_select :tags_ids, tags, :id, :title, {}, multiple: true %>
     </div>
   </div>
 
